--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -5,16 +5,19 @@
   --header-height: 100px;
   --menu-top-height: 70px;
   --aside-width: 225px;
+  --footer-height: 40px;
 
   --shadow:
-  0 2px 23px 0 rgba(0, 0, 0, 0.1),
-  0 2px 49px 0 rgba(0, 0, 0, 0.06);
+    0 2px 23px 0 rgba(0, 0, 0, 0.1),
+    0 2px 49px 0 rgba(0, 0, 0, 0.06);
 }
 
 *{
   box-sizing: border-box;
-  font-family: 'Montserrat, sans-serif';
+  font-family: 'Montserrat', sans-serif;
 }
+
+/* Layout em grid */
 
 .app{
   margin: 0;
@@ -22,13 +25,13 @@
   padding: 0;
   grid-template-columns: var(--aside-width) 1fr;
   grid-template-rows: 
-  var(--header-height)
-  1fr
-  var(--footer-height);
-  grid-template-areas:
-  "logo header"
-  "menu content"
-  "menu footer";
+    var(--header-height)
+    1fr
+    var(--footer-height);
+  grid-template-areas: 
+    "logo header"
+    "menu content"
+    "menu footer";
   background-color: #FFF;
 }
 
@@ -54,33 +57,33 @@ footer.footer{
 
 @media(max-width: 768px){
   .app{
-    grid-auto-rows:
-    var(--header-height)
-    var(--menu-top-height)
-    1fr
-    var(--footer-height);
+    grid-template-rows: 
+      var(--header-height)
+      var(--menu-top-height)
+      1fr
+      var(--footer-height);
     grid-template-columns: var(--aside-width) 1fr;
     grid-template-areas: 
-    "logo header"
-    "menu menu"
-    "content content"
-    "footer footer";
+      "logo header"
+      "menu menu"
+      "content content"
+      "footer footer";
   }
 }
 
 @media(max-width: 576px){
   .app{
-    grid-auto-rows:
-    var(--logo-height)
-    var(--footer-height);
+    grid-template-rows:
+      var(--logo-height)
+      var(--menu-top-height)
+      1fr
+      var(--footer-height);
     grid-template-columns: 1fr;
     grid-template-rows: 
-    "logo"
-    "menu"
-    "header"
-    "content"
-    "footer";
+      "logo"
+      "menu"
+      "header"
+      "content"
+      "footer";
   }
 }
-
-
